--- a/src/sections/About/AboutHero/AboutHero.css
+++ b/src/sections/About/AboutHero/AboutHero.css
@@ -28,7 +28,7 @@
     z-index: 2;
     max-width: 1200px;
     margin: 0 auto;
-    padding-top: 100px !important; /* MATCHING HOME HERO! */
+    padding-top: 30px !important; /* MATCHING HOME HERO! */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -73,11 +73,11 @@
 
 .about-hero-description {
     font-family: "Manrope", sans-serif;
-    font-size: 19px;
+    font-size: 21px;
     line-height: 1.6;
     font-weight: 500;
     color: #f1f1f1 !important;
-    max-width: 1050px;
+    max-width: 900px;
     margin: 0 auto 10px;
     text-align: center !important;
 }
@@ -85,7 +85,7 @@
 /*tablet responsive*/
 @media (max-width: 1199px) {
     .about-hero-container {
-        padding-top: 80px !important;
+        padding-top: 25px !important;
     }
 
     .about-hero-heading {
@@ -104,7 +104,7 @@
     }
 
     .about-hero-container {
-        padding-top: 60px !important;
+        padding-top: 20px !important;
         padding-bottom: 120px !important; /* MATCHING HOME HERO FOR STICKY FOOTER! */
         gap: 20px;
     }
@@ -132,6 +132,3 @@
         height: 48px !important;
     }
 }
-
-
-
